[tool.poetry]
name = "srcview"
version = "0.1.0"
description = "Open a function or module's source code in your editor"
authors = ["Yair Chuchem <yairchu@gmail.com>"]
license = "BSD"
readme = "README.md"
include = ["srcview.py"]

[tool.poetry.dependencies]
python = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
